--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,12 @@
   /* выше установили ограничения для секции */
   position: relative;
   background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 
@@ -26,37 +32,32 @@
   width: 183px;
   height: 32px;
   position: absolute;
-  margin-left: 64px;
-  margin-top: 30px;
+  left: 64px;
+  top: 30px;
   
 }
 
 .header__title {
-  display: flex;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  width: 730px;
+  margin-left: 64px;
   line-height: 96px;
   font-size: 102px;
   font-style: bold;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 730px;
-  margin-left: 64px;
+  z-index: 2;
 }
 
 
-.subtitle {
+.header__subtitle {
   margin-top: 0px;
   line-height: 25px;
   font-size: 18px;
+  margin-bottom: 0px;
   font-style: normal;
   position: absolute;
-  bottom: 0px;
-  left: 0px;
   width: 388px;
-  margin-left: 64px;
-  margin-bottom: 30px;
+  left: 64px;
+  bottom: 30px;
+  z-index: 2;
 }
 .header__link {
   text-decoration: none;
@@ -89,20 +90,21 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.paragraph:nth-of-type(2n) {
-  margin-top: 30px;
-  margin-bottom: 30px;
-} 
-.paragraph {
+
+.two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   margin: 0px;
+  margin-bottom: 30px;
 } 
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
+}
 
 
 
-.brief {
+.two-columns__brief {
   margin: 0px;
   width: 175px;
   line-height: 1.2;
@@ -110,7 +112,7 @@
   font-weight: normal;
   color: #2f80ed;
 }
-.main-text {
+.two-columns__main-text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -123,7 +125,7 @@
   flex-direction: row;
   justify-content: center;
 }
-.span-accent {
+.two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
@@ -139,12 +141,13 @@
 .section-title {
   margin: auto;
   width: 60%;
-  margin-bottom: 20px;
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
+  margin-bottom: 20px;
 }
+
 .section-subtitle {
   margin: auto;
   width: 60%;
@@ -153,6 +156,7 @@
   font-size: 24px;
   font-weight: normal;
 }
+
 .table {
   display: flex;
   flex-wrap: wrap;
@@ -161,6 +165,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding-left: 0px;
+  list-style: none;
 }
 
 .table__cell {
@@ -180,34 +185,28 @@
 }
 
 .table__text {
-  margin-top: 20px;
-  margin-bottom: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-}
-
-.table__text-margin {
-  margin-top: 0px;
+  margin-top: 20px;
   margin-bottom: 0px;
 }
 
 .feynman {
   position: relative;
-  height: 790px;
+  min-height: 790px;
   padding-top: 100px;
   background-color: #f2f2f2;
-  z-index: -1;
+  z-index: 0;
 }
 
 .feynman__title {
-  display: flex;
   margin: auto;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  width: 648px;
+  max-width: 648px;
   margin-bottom: 70px;
 }
 .feynman__subtitle {
@@ -248,7 +247,7 @@
 .kaufman {
   position: relative;
   background-color: #1f1f1f;
-  z-index: -2;
+  z-index: 0;
   overflow: hidden;
   padding-top: 90px;
   padding-bottom: 90px;
@@ -282,7 +281,7 @@
   flex-wrap: wrap;
   padding-left: 0px;
   margin: auto;
-  
+  list-style: none;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -300,9 +299,6 @@
   font-size: 24px;
   font-weight: bold;
 }
-ul {
-  list-style: none;
-}
 
 .table__text_theme_dark {
   margin-top: 0px;
@@ -312,7 +308,7 @@ ul {
   font-weight: normal;
   display: inline;
 }
-.kaufman_triangle {
+.kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
   background-size: cover;
   height: 877px;
@@ -327,9 +323,11 @@ ul {
 
 .footer {
   min-height: 350px;
-  background-color: #000000;
+  background-color: #1f1f1f;
   padding-top: 60px;
   padding-bottom: 40px;
+  box-sizing: border-box;
+  display: flex;
 }
 
 .footer__columns {
@@ -338,6 +336,8 @@ ul {
   justify-content: space-between;
   width: 90%;
   margin: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .footer__column_content_copyright {
@@ -357,10 +357,10 @@ ul {
   color: #fff;
   margin-top: 18px;
   margin-bottom: 18px;
-  width: fit-content;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  width: fit-content;
 }
 
 .footer__column-heading {
@@ -368,6 +368,8 @@ ul {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .footer__column-links {
@@ -377,6 +379,11 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  list-style: none;
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
 }
 
 .footer__column-link {
