--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@
   margin-left: 64px;
   line-height: 96px;
   font-size: 102px;
-  font-style: bold;
+  font-weight: bold;
   z-index: 2;
 }
 
@@ -273,7 +273,7 @@
   color: #fff;
 }
 
-.table_theme_dark {
+/* .table_theme_dark {
   width: 1100px;
   display: flex;
   flex-direction: row;
@@ -282,7 +282,7 @@
   padding-left: 0px;
   margin: auto;
   list-style: none;
-}
+} */
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
