проектная работа 2 ревью 2

--- a/blocks/resources/__logo/_image/resources__logo_image-arzamas.css
+++ b/blocks/resources/__logo/_image/resources__logo_image-arzamas.css
@@ -1,4 +1,4 @@
-.resources__logo_arzamas {
+.resources__logo_image-arzamas {
     background-image: url(../../../../images/resources-arzamas.svg);
     
 }
