--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,5 +1,7 @@
 .video__iframes {
     display: flex;
     justify-content: center;
-    height: 316px;
+    position: relative;
+    bottom: -50px;
+    margin-top: -50px;
 }
