--- a/blocks/resources/__logo/_image/resources__logo_image-strelka.css
+++ b/blocks/resources/__logo/_image/resources__logo_image-strelka.css
@@ -1,3 +1,3 @@
-.resources__logo_strelka {
+.resources__logo_image-strelka {
     background-image: url(../../../../images/resources-strelka.svg);
 }
