--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url("../vendor/normalize.css");
 @import url("../blocks/page/page.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/logo/_place/logo_place_header.css");
@@ -67,8 +68,8 @@
 @import url("../blocks/resources/__logo-zone/resources__logo-zone.css");
 @import url("../blocks/resources/__logo/resources__logo.css");
 @import url("../blocks/hover/hover.css");
-@import url("../blocks/resources/__logo/_arzamas/resources__logo_arzamas.css");
-@import url("../blocks/resources/__logo/_n1/resources__logo_n1.css");
-@import url("../blocks/resources/__logo/_strelka/resources__logo_strelka.css");
-@import url("../blocks/resources/__logo/_polka/resources__logo_polka.css");
+@import url("../blocks/resources/__logo/_image/resources__logo_image-arzamas.css");
+@import url("../blocks/resources/__logo/_image/resources__logo_image-n1.css");
+@import url("../blocks/resources/__logo/_image/resources__logo_image-strelka.css");
+@import url("../blocks/resources/__logo/_image/resources__logo_image-polka.css");
 
